[package]
name = "tpic6b595"
authors =["Ricardo Beck"]
description = "Embedded driver for TPIC6B595 Power Logic Shift Register IC"
version = "0.1.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/tpic6b595"
repository = "https://github.com/Spritkopf/tpic6b595"


[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }

[profile.dev]
debug = true
split-debuginfo = "packed"
